# waterworks

./: .envrc  .gitignore  README.md  pyproject.toml
src/waterworks/ask/: ask_cli.py
src/waterworks/ask/prompts/: debug_prompt.jinja2  system_prompt.jinja2
