[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waterworks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "conduit"
]

[tool.hatch.build.targets.wheel]
packages = ["src/waterworks"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/waterworks/py.typed"]

[tool.uv.sources]
conduit = { path = "../conduit-project", editable = true }

[project.scripts]
ask = "waterworks.ask.ask_cli:main"
